--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="css/base.css">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
   <!--header-->
@@ -64,12 +65,14 @@
     <!--nav-->
     <nav id="nav" class="container">
       <ul>
+        <!--下拉列表-->
         <li class="fl font_14 drop_list">
           <div class=drop_btn>
             <a class="font_white" href="index.html">所有商品分类</a>
             <span class="arrow"></span>
           </div>
           <ul class="drop_menu">
+            <!--多个侧拉列表-->
             <li v-for="(item,i) of nav_list" :key="item.id" class="side_list" :class="i==0?'first':'other'">
               <div class="side_btn">
                 <img class="smallicon" :src="item.path">
@@ -107,22 +110,56 @@
   </header>
   <section id="section">
     <div class="carousel">
-      <ul class="car_img">
-        <li v-for="item of carousel_list"><img :src="item.src" alt=""></li>
-      </ul>
+      <!--轮播图主体-->
+      <div class="car_img">
+        <a href="#" v-for="item of carousel_list" :key="item.id">
+          <img :src="item.src" alt="" :class="item.id==index_id?'active':''" >
+        </a>
+      </div>
       <ul class=car_index>
-        <li></li>
+        <li v-for="(item,i) of carousel_list" :key="item.id" @click="changeimg(i+1)" :class="i+1==index_id?'active':''"></li>
+      </ul>
+    </div>
+    <div class="today_rec container">
+      <div class="title">今日推荐</div>
+      <div class="scroll_box">
+        <ul class="today_img">
+          <li v-for="(item,i) of today_list">
+            <a :src="item.src"><img :src="item.img_url" alt=""></a>
+          </li>
+        </ul> 
+      </div>
+      <div class="arrow-left" @click="prev">
+        <span></span>
+      </div>
+      <div class="arrow-right" @click="next">
+        <span></span>
+      </div>
+    </div>
+    <div class="hot_rec container">
+      <h1>热门推荐 
+        <p class="another"><span>换一批</span><span class="another_icon"></span></p>
+      </h1>
+      <ul class="rec_box">
+        <li class="hot_item" v-for="item of hot_list">
+          <a href="item.src">
+            <img :src="item.img_url" alt="">
+            <p class="font_gray1">{{item.title}}</p>
+          </a>
+          <p>￥{{item.price}}</p>
+        </li>
       </ul>
     </div>
   </section>
   <aside id="aside"></aside>
   <!--footer-->
-  <iframe src="footer.html" frameborder="0" scrolling="no" style="width:100%;"></iframe>
+  <iframe src="footer.html" frameborder="0" scrolling="no" style="width:100%;height:410px; margin-top:200px"></iframe>
 </body>
 <script src="js/vue.js"></script>
 <script src="js/axios.min.js"></script>
 <script src="js/jquery-1.11.3.js"></script>
-<script src="js/index.js"></script>
 <script src="js/header.js"></script>
+<script src="js/index.js"></script>
+
 
 </html>
