--- a/header.html
+++ b/header.html
@@ -1,15 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <link rel="stylesheet" href="css/base.css">
-  <link rel="stylesheet" href="css/header.css">
-</head>
-<body>
-  <header id="header">
     <!--header1-->
     <div id="header1">
       <div class="container clearfix">
@@ -41,8 +29,8 @@
     </div>
     <!--header2-->
     <div id="header2" class="container">
-        <a href="index.html"><img src="image/logo.jpg" alt="优生活商城"></a>
-        <a href="#"><img src="image/kfrx.jpg" alt="客服热线"></a>
+        <a href="index.html"><img src="http://127.0.0.1:80/images/logo.jpg" alt="优生活商城"></a>
+        <a href="#"><img src="http://127.0.0.1:80/images/kfrx.jpg" alt="客服热线"></a>
         <input type="text" class="searchBox" placeholder="膳魔师">
         <div class="hot">
           <span>热门搜索：</span>
@@ -57,9 +45,29 @@
         <button class="icon_box">
             <i class="search_icon"></i>
         </button>
-        <a href="#" class="font_14">
-          <span class="shop_cart"><span class=shop_icon></span>我的购物车</span><span class="count">0</span>
-        </a>
+        <div class="shopping_cart">
+          <div class="drop_btn">
+            <div>
+              <a href="#" class="font_14">
+                <span class="icon"></span>
+                <span>我的购物车</span>
+              </a>
+            </div>
+            <div class="count">0</div>
+          </div>
+          <div class="drop_list">
+            <div class="shopping_list">
+              <div class="shopping_item">购物车中还没有商品，再去逛逛吧！</div>
+              <!-- <div class="shopping_item">未写任何样式
+                <img src="http://127.0.0.1:80/images/index_1L2.jpg" alt="">
+
+              </div> -->
+            </div>
+            <div class="balance">
+              <span>共 0 件</span><span>￥99.00</span><span><a href="javascript:;" class="font_white font_bold">结算</a></span>
+            </div>
+          </div>
+        </div>
     </div>
     <!--nav-->
     <nav id="nav" class="container">
@@ -96,17 +104,9 @@
               <div class="active" :style="`top:${item.id*60}px;`"></div>
             </li>
           </ul>
-          
         </li>
         <li class="fl font_14"><a class="font_gray1" href="index.html">首页</a></li>
         <li class="fl font_14"><a class="font_gray1" href="index.html">帮助中心</a></li>
         <li class="fl font_14"><a class="font_gray1" href="index.html">兑换教程</a></li>
       </ul>
     </nav>
-  </header>
-  <script src="js/jquery-1.11.3.js"></script>
-  <script src="js/vue.js"></script>
-  <script src="js/header.js"></script>
-</body>
-</html>
-
