--- a/user_register.html
+++ b/user_register.html
@@ -10,7 +10,7 @@
 		<!--header-->
 		<div id="header">
 			<div class="header1 container">
-				<a href="index.html"><img src="image/logo.jpg" alt="优生活"></a>
+				<a href="index.html"><img src="http://127.0.0.1:80/images/logo.jpg" alt="优生活"></a>
 				<h1>欢迎注册</h1>
 			</div>
 			<div class="header2">
