--- a/index.html
+++ b/index.html
@@ -4,162 +4,367 @@
   <meta charset="UTF-8">
   <title></title>
   <link rel="stylesheet" href="css/base.css">
-  <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-  <!--header-->
-  <header id="header">
-    <!--header1-->
-    <div id="header1">
-      <div class="container clearfix">
-        <ul class="fr" >
-          <li>您好，欢迎来到优生活商城 <span>|</span></li>
-          <li>
-            <a href="user_login.html" class="font_gray1">[请登录]</a>
-            <a href="user_register.html" class="font_gray1">[免费注册]</a>
-            <span>|</span>
-          </li>
-          <li>
-            <div class="dropdown">
-              <a href="#" class="font_gray1">会员中心<i class="rotate"></i></a>
-              <div class="drop_content">
-                  <a href="#" class="font_gray1">我的订单</a>
-              </div>
-            </div>
-          </li>
-          <li>
-            <span>|</span>
-            <a href="#" class="font_gray1">加入收藏</a>
-            <span>|</span>
-          </li>
-          <li>
-            <a href="#" class="font_gray1">分享给好友</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <!--header2-->
-    <div id="header2" class="container">
-        <a href="index.html"><img src="image/logo.jpg" alt="优生活商城"></a>
-        <a href="#"><img src="image/kfrx.jpg" alt="客服热线"></a>
-        <input type="text" class="searchBox" placeholder="膳魔师">
-        <div class="hot">
-          <span>热门搜索：</span>
-          <a href="">大润窑</a>
-          <a href="">公牛</a> 
-          <a href="">锅</a> 
-          <a href="">新榜样</a> 
-          <a href="">加加</a> 
-          <a href="">百安思</a> 
-          <a href="">乐扣</a>
-        </div>
-        <button class="icon_box">
-            <i class="search_icon"></i>
-        </button>
-        <a href="#" class="font_14">
-          <span class="shop_cart"><span class=shop_icon></span>我的购物车</span><span class="count">0</span>
-        </a>
-    </div>
-    <!--nav-->
-    <nav id="nav" class="container">
-      <ul>
-        <!--下拉列表-->
-        <li class="fl font_14 drop_list">
-          <div class=drop_btn>
-            <a class="font_white" href="index.html">所有商品分类</a>
-            <span class="arrow"></span>
-          </div>
-          <ul class="drop_menu">
-            <!--多个侧拉列表-->
-            <li v-for="(item,i) of nav_list" :key="item.id" class="side_list" :class="i==0?'first':'other'">
-              <div class="side_btn">
-                <img class="smallicon" :src="item.path">
-                <a href="javascript:;">{{item.txt}}</a>
-                <span class="small_arrow"></span>
-              </div>
-              <div class="side_menu">
-                <div class="fl">
-                  <h1><a href="" v-for="item1 of item.title">{{item1}}</a></h1>
-                  <div class="rec_list">
-                    <button class="rec_btn" v-for="item2 of item.index">
-                      <a class="font_white" href="">{{item2}}</a>
-                    </button>
-                  </div>
-                </div>
-                <div class="recommend fr">
-                  <p>推荐品牌</p>
-                  <div v-for="item3 of item.rec_brand">
-                    <a href="#">
-                      <p>{{item3.title}}</p>
-                      <img :src="item3.img">
-                    </a>
-                  </div>
-                </div>
-              </div>
-              <div class="active" :style="`top:${item.id*60}px;`"></div>
-            </li>
-          </ul>
-        </li>
-        <li class="fl font_14"><a class="font_gray1" href="index.html">首页</a></li>
-        <li class="fl font_14"><a class="font_gray1" href="index.html">帮助中心</a></li>
-        <li class="fl font_14"><a class="font_gray1" href="index.html">兑换教程</a></li>
-      </ul>
-    </nav>
-  </header>
+  <header id="header"></header>
   <section id="section">
+    <!-- 轮播图 -->
     <div class="carousel">
       <!--轮播图主体-->
       <div class="car_img">
-        <a href="#" v-for="item of carousel_list" :key="item.id">
-          <img :src="item.src" alt="" :class="item.id==index_id?'active':''" >
+        <a href="#" v-for="(item,i) of carousel_list" :key="item.id">
+          <img :src="item.src" alt="" :class="i==index_id?'active':''" >
         </a>
       </div>
+      <!-- 小圆点 -->
       <ul class=car_index>
-        <li v-for="(item,i) of carousel_list" :key="item.id" @click="changeimg(i+1)" :class="i+1==index_id?'active':''"></li>
+        <li v-for="(item,i) of carousel_list" :key="item.id" @click="changeimg" :data-id="i" :class="i==index_id?'active':''"></li>
       </ul>
     </div>
+    <!-- 今日推荐 -->
     <div class="today_rec container">
       <div class="title">今日推荐</div>
       <div class="scroll_box">
-        <ul class="today_img">
+        <ul class="today_img" :style="`transition:${transition};margin-left:${marginLeft}px;`">
           <li v-for="(item,i) of today_list">
-            <a :src="item.src"><img :src="item.img_url" alt=""></a>
+            <a :src="item.href"><img :src="item.img_url" alt=""></a>
           </li>
         </ul> 
       </div>
-      <div class="arrow-left" @click="prev">
-        <span></span>
-      </div>
-      <div class="arrow-right" @click="next">
-        <span></span>
-      </div>
+        <div class="arrow-left" @click="prev"><span></span></div>
+        <div class="arrow-right" @click="next"><span></span></div>
     </div>
+    <!-- 热门推荐 -->
     <div class="hot_rec container">
-      <h1>热门推荐 
-        <p class="another"><span>换一批</span><span class="another_icon"></span></p>
+      <h1>
+        <span>热门推荐 </span>
+        <p class="another" @click="changeAnother"><span>换一批</span><span class="another_icon"></span></p>
       </h1>
       <ul class="rec_box">
         <li class="hot_item" v-for="item of hot_list">
-          <a href="item.src">
-            <img :src="item.img_url" alt="">
-            <p class="font_gray1">{{item.title}}</p>
-          </a>
-          <p>￥{{item.price}}</p>
+          <a href="item.href"><img :src="item.img_url" alt=""> </a>
+          <p><a href="">{{item.title}}</a></p>
+          <p>￥<span>{{item.price}}</span></p>
         </li>
       </ul>
+    </div>
+    <div class="floor">
+      <!-- 1F -->
+      <div class="floor1 container">
+        <!-- 1F头部 -->
+        <h1>
+          <div class="title">
+            <span>1F</span>
+            <span>精选杯子</span>
+          </div>
+          <div class="icon">
+            <span class="font_white">厨具餐具</span>
+            <i></i>
+          </div>
+        </h1>
+        <!-- 1F主体 -->
+        <div class="box clearfix">
+          <!-- 左边1个 -->
+          <div class="left">
+            <img src="http://127.0.0.1:80/images/index_1L1.jpg" alt="">
+            <ul class="clearfix">
+              <li><a href="">茶具饮具</a></li>
+              <li><a href="">厨房配件</a></li>
+              <li><a href="">烹饪锅具</a></li>
+              <li><a href="">餐具类</a></li>
+            </ul>
+          </div>
+          <!-- 右边8个 -->
+          <div class="right">
+            <ul class="clearfix common">
+              <li>
+                <a href=""><img src="http://127.0.0.1:80/images/index_1L2.jpg" alt=""></a>
+                <p><a href="">乐扣乐扣迷你保温杯</a></p>
+                <p>¥<span>52.90</span></p>
+              </li>
+              <li>
+                <a href=""><img src="http://127.0.0.1:80/images/index_1L3.jpg" alt=""></a>
+                <p><a href="">乐扣马克家庭套装（两大一小）(3件套)</a></p>
+                <p>¥<span>325.00</span></p>
+              </li>
+              <li>
+                <a href=""><img src="http://127.0.0.1:80/images/index_1L4.jpg" alt=""></a>
+                <p><a href="">百安思便携式保温水杯BMD</a></p>
+                <p>¥<span>128.00</span></p>
+              </li>
+              <li>
+                <a href=""><img src="http://127.0.0.1:80/images/index_1L5.jpg" alt=""></a>
+                <p><a href="">百安思便携式保温水杯BMJ</a></p>
+                <p>¥<span>168.00</span></p>
+              </li>
+              <li>
+                <a href=""><img src="http://127.0.0.1:80/images/index_1L6.jpg" alt=""></a>
+                <p><a href="">百安思玻璃内胆保温壶APD(磨砂)</a></p>
+                <p>¥<span>138.00</span></p>
+              </li>
+              <li>
+                <a href=""><img src="http://127.0.0.1:80/images/index_1L7.jpg" alt=""></a>
+                <p><a href="">百安思304不锈钢真空，焖烧罐BSH(紫色500ml)</a></p>
+                <p>¥<span>138.00</span></p>
+              </li>
+              <li>
+                <a href=""><img src="http://127.0.0.1:80/images/index_1L8.jpg" alt=""></a>
+                <p><a href="">乐扣乐扣炫彩组合双杯(玫红 蓝)</a></p>
+                <p>¥<span>236.00</span></p>
+              </li>
+              <li>
+                <a href=""><img src="http://127.0.0.1:80/images/index_1L9.jpg" alt=""></a>
+                <p><a href="">百安思焖烧罐BSF儿童(都市生活500ml)(动物世界500ml)</a></p>
+                <p>¥<span>125.00</span></p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- 2F -->
+      <div class="floor2 container">
+        <!-- 2F头部 -->
+        <h1>
+          <div class="title">
+            <span>2F</span>
+            <span>生活家电</span>
+          </div>
+          <div class="icon">
+            <span class="font_white">生活家电</span>
+            <i></i>
+          </div>
+        </h1>
+        <!-- 2F主体 -->
+        <div class="box clearfix">
+          <!-- 左边1个 -->
+          <div class="left">
+            <img src="http://127.0.0.1:80/images/index_2L1.jpg" alt="">
+            <ul class="clearfix">
+              <li><a href="">生活电器</a></li>
+              <li><a href="">厨房小家电</a></li>
+              <li><a href="">个护健康</a></li>
+              <li><a href="">大家电</a></li>
+            </ul>
+          </div>
+          <!-- 右边8个 -->
+          <div class="right">
+            <ul class="clearfix common">
+              <li class="my_carousel">
+                <ul class="img">
+                  <li><a href=""><img src="http://127.0.0.1:80/images/index_2L2.jpg" alt=""></a></li>
+                  <li><a href=""><img src="http://127.0.0.1:80/images/index_2L2-2.jpg" alt=""></a></li>
+                </ul>
+                <div class="arrow">
+                  <div class="arrow-left"><span></span></div>
+                  <div class="arrow-right"><span></span></div>
+                </div>
+                <div class="index clearfix">
+                  <div class="active"></div>
+                  <div></div>
+                </div>
+              </li>
+              <li>
+                <a href=""><img src="http://127.0.0.1:80/images/index_2L3.jpg" alt=""></a>
+                <p><a href="">龙的巧趣系列电烤箱红外加热大容量 LD-KX12A</a></p>
+                <p>¥<span>228.00</span></p>
+              </li>
+              <li>
+                <a href=""><img src="http://127.0.0.1:80/images/index_2L4.jpg" alt=""></a>
+                <p><a href="">龙的派乐系列电子饭盒LD-FH15C</a></p>
+                <p>¥<span>138.00</span></p>
+              </li>
+              <li>
+                <a href=""><img src="http://127.0.0.1:80/images/index_2L5.jpg" alt=""></a>
+                <p><a href="">恵钻系列电磁炉 NK-CL2010A</a></p>
+                <p>¥<span>276.00</span></p>
+              </li>
+              <li>
+                <a href=""><img src="http://127.0.0.1:80/images/index_2L6.jpg" alt=""></a>
+                <p><a href="">龙的微电脑电饭煲 LD-FS420</a></p>
+                <p>¥<span>698.00</span></p>
+              </li>
+              <li>
+                <a href=""><img src="http://127.0.0.1:80/images/index_2L7.jpg" alt=""></a>
+                <p><a href="">新榜样8.2超高型 多功能韩式电热锅X0332</a></p>
+                <p>¥<span>179.00</span></p>
+              </li>
+              <li>
+                <a href=""><img src="http://127.0.0.1:80/images/index_2L8.jpg" alt=""></a>
+                <p><a href="">新榜样水性元宝锅X0170</a></p>
+                <p>¥<span>219.00</span></p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- 3F -->
+      <div class="floor3 container">
+        <!-- 3F头部 -->
+        <h1>
+          <div class="title">
+            <span>3F</span>
+            <span>小家电</span>
+          </div>
+          <div class="icon">
+            <span class="font_white">小家电</span>
+            <i></i>
+          </div>
+        </h1>
+        <!-- 3F主体 -->
+        <div class="box clearfix">
+          <!-- 左边1个 -->
+          <div class="left">
+            <img src="http://127.0.0.1:80/images/index_3L1.jpg" alt="">
+            <ul class="clearfix">
+              <li><a href="">生活电器</a></li>
+              <li><a href="">厨房小家电</a></li>
+              <li><a href="">个护健康</a></li>
+              <li><a href="">大家电</a></li>
+            </ul>
+          </div>
+          <!-- 右边8个 -->
+          <div class="right">
+            <ul class="clearfix">
+              <li>
+                <ul class="clearfix">
+                  <li>
+                    <a href=""><img src="http://127.0.0.1:80/images/index_3L2.jpg" alt=""></a>
+                    <p><a href="">飞科6220吹风机</a></p>
+                    <p>¥<span>166.00</span></p>
+                  </li>
+                  <li>
+                     <a href=""><img src="http://127.0.0.1:80/images/index_3L3.jpg" alt=""></a>
+                    <p><a href="">朗威Rs862剃须刀(1个)</a></p>
+                    <p>¥<span>39.00</span></p>
+                  </li>
+                </ul>
+              </li>
+              <li class="my_carousel">
+                <ul class="img clearfix">
+                  <li><a href=""><img src="http://127.0.0.1:80/images/index_3L4.jpg" alt=""></a></li>
+                  <li><a href=""><img src="http://127.0.0.1:80/images/index_3L5.jpg" alt=""></a></li>
+                </ul>
+                <div class="arrow">
+                  <div class="arrow-left"><span></span></div>
+                  <div class="arrow-right"><span></span></div>
+                </div>
+                <div class="index">
+                  <div class="active"></div>
+                  <div></div>
+                </div>
+              </li>
+              <li>
+                <ul class="clearfix">
+                  <li>
+                    <a href=""><img src="http://127.0.0.1:80/images/index_3L6.jpg" alt=""></a>
+                    <p><a href="">光明5800吹风机</a></p>
+                    <p>¥<span>110.00</span></p>
+                  </li>
+                  <li>
+                    <a href=""><img src="http://127.0.0.1:80/images/index_3L7.jpg" alt=""></a>
+                    <p><a href="">朗威9108理发器</a></p>
+                    <p>¥<span>98.00</span></p>
+                  </li>
+                  <li>
+                    <a href=""><img src="http://127.0.0.1:80/images/index_3L8.jpg" alt=""></a>
+                    <p><a href="">飞科剃须刀Fs876</a></p>
+                    <p>¥<span>135.00</span></p>
+                  </li>
+                  <li>
+                    <a href=""><img src="http://127.0.0.1:80/images/index_3L9.jpg" alt=""></a>
+                    <p><a href="">久量折叠式柔光台灯686</a></p>
+                    <p>¥<span>35</span></p>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- 4F -->
+      <div class="floor4 container">
+        <!-- 4F头部 -->
+        <h1>
+          <div class="title">
+            <span>4F</span>
+            <span>精品茶具 ，瓷杯</span>
+          </div>
+          <div class="icon">
+            <span class="font_white">茶具水具</span>
+            <i></i>
+          </div>
+        </h1>
+        <!-- 4F主体 -->
+        <div class="box clearfix">
+          <!-- 左边1个 -->
+          <div class="left">
+            <img src="http://127.0.0.1:80/images/index_4L1.jpg" alt="">
+            <ul class="clearfix">
+              <li><a href="">茶具饮具</a></li>
+              <li><a href="">厨房配件</a></li>
+              <li><a href="">烹饪锅具</a></li>
+              <li><a href="">餐具类</a></li>
+            </ul>
+          </div>
+          <!-- 右边8个 -->
+          <div class="right">
+            <ul class="clearfix common">
+              <li>
+                <a href=""><img src="http://127.0.0.1:80/images/index_4L2.jpg" alt=""></a>
+                <p><a href="">大润窑12头青花茶具</a></p>
+                <p>¥<span>75.00</span></p>
+              </li>
+              <li>
+                <a href=""><img src="http://127.0.0.1:80/images/index_4L3.jpg" alt=""></a>
+                <p><a href="">申福12头青花餐具</a></p>
+                <p>¥<span>75.00</span></p>
+              </li>
+              <li>
+                <a href=""><img src="http://127.0.0.1:80/images/index_4L4.jpg" alt=""></a>
+                <p><a href="">申福 青花瓷功夫茶具套装 手绘荷花 10件套礼盒装</a></p>
+                <p>¥<span>85.00</span></p>
+              </li>
+              <li>
+                <a href=""><img src="http://127.0.0.1:80/images/index_4L5.jpg" alt=""></a>
+                <p><a href="">大润窑 2头日式时尚蓝钻罐瓶搭配(2个)</a></p>
+                <p>¥<span>75.00</span></p>
+              </li>
+              <li>
+                <a href=""><img src="http://127.0.0.1:80/images/index_4L6.jpg" alt=""></a>
+                <p><a href="">大润窑青花10头茶具</a></p>
+                <p>¥<span>70.00</span></p>
+              </li>
+              <li>
+                <a href=""><img src="http://127.0.0.1:80/images/index_4L7.jpg" alt=""></a>
+                <p><a href="">大润窑7头青春茶具(7)</a></p>
+                <p>¥<span>60.00</span></p>
+              </li>
+              <li>
+                <a href=""><img src="http://127.0.0.1:80/images/index_4L8.jpg" alt=""></a>
+                <p><a href="">大润窑 汝窑10头茶具</a></p>
+                <p>¥<span>85.00</span></p>
+              </li>
+              <li>
+                <a href=""><img src="http://127.0.0.1:80/images/index_4L9.jpg" alt=""></a>
+                <p><a href="">申福青花瓷单人餐具套装</a></p>
+                <p>¥<span>218.00</span></p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
   <aside id="aside"></aside>
   <!--footer-->
-  <iframe src="footer.html" frameborder="0" scrolling="no" style="width:100%;height:410px; margin-top:200px"></iframe>
+  <iframe src="footer.html" frameborder="0" scrolling="no" style="width:100%;height:410px; margin-top:10px"></iframe>
 </body>
+<script src="myComponents/carousel.js"></script>
 <script src="js/vue.js"></script>
 <script src="js/axios.min.js"></script>
-<script src="js/jquery-1.11.3.js"></script>
 <script src="js/header.js"></script>
 <script src="js/index.js"></script>
-
 
 </html>
