--- a/user_login.html
+++ b/user_login.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div  id="header" class="container clearfix">
-			<a href="index.html"><img src="image/logo.jpg" alt="优生活"></a>
+			<a href="index.html"><img src="http://127.0.0.1:80/images/logo.jpg" alt="优生活"></a>
 			<h1 class="font_26">欢迎登录</h1>
 		</div>
 		<div id="section">
@@ -16,30 +16,39 @@
 				<div class="login_form ">
 					<form>
 						<div class="font_18">
-							<a href="#" class="font_bold font_orange1">账号密码登录</a>
-							<a href="#" class="font_gray1">微信扫码登录</a>
+							<a href="javascript:;" class="normal_login font_bold font_orange1">账号密码登录</a>
+							<a href="javascript:;" class="wx_login font_gray1">微信扫码登录</a>
 						</div>
-						<div class="rel">
-							<img class="img_user" src="image/user.png"/>
-							<input class="text" type="text" name="uname" placeholder="已验证手机/邮箱/用户名">
-							<p class="err">请输入6-20位数字、字母或下划线组成的用户名</p>
+						<!-- 登陆 主体-->
+						<div class="login_box">
+							<div class="normal_login_box">
+								<div class="rel">
+									<img class="img_user" src="http://127.0.0.1:80/images/user.png"/>
+									<input class="text" type="text" name="uname" placeholder="已验证手机/邮箱/用户名">
+									<p class="err">请输入6-20位数字、字母或下划线组成的用户名</p>
+								</div>
+								<div class="rel">
+									<img class="img_code" src="http://127.0.0.1:80/images/code.png"/>
+									<input class="text" type="password" name="upwd" placeholder="密码">
+									<p class="err">请输入密码</p>
+								</div>
+								<div><a href="#" class="ml_263 font_gray1">忘记密码？</a></div>
+								<div>
+									<input class="font_white bg_orange1 login_btn" type="submit" value="登 录">
+								</div>
+							</div>
+								<!-- 微信扫码登陆-->
+							<div class="wx_login_box"><img src="http://127.0.0.1:80/images/erweima.jpg" alt=""></div>
 						</div>
-						<div class="rel">
-							<img class="img_code" src="image/code.png"/>
-							<input class="text" type="password" name="upwd" placeholder="密码">
-							<p class="err">请输入密码</p>
-						</div>
-						<div><a href="#" class="ml_263 font_gray1">忘记密码？</a></div>
-						<div>
-							<input class="font_white bg_orange1 login_btn" type="submit" value="登 录">
-						</div>
+
+						<!-- 登陆框footer-->
 						<div>
 							<a href="#" class="font_gray1">
-								<img src="image/q3.png" alt="微博">微博
+								<img src="http://127.0.0.1:80/images/q3.png" alt="微博">微博
 							</a>
 							<span class="line">|</span>
 							<a href="#" class="font_gray1">
-								<img src="image/q1.png" alt="QQ">QQ
+								<img src="http://127.0.0.1:80/images/q1.png" alt="QQ">QQ
 							</a>
 							<a href="user_register.html" class="ml_121 font_orange1 font_bold">
 								立即注册
