--- a/products.html
+++ b/products.html
@@ -86,7 +86,7 @@
         <p class="font_bold font_14">浏览过的商品</p>
         <div class="visited"></div>
       </div>
-      <div class="section fl">
+      <div class="main fl">
         <div class="filter">
           <div class="left fl">
             <span class="title">排序:</span>
@@ -108,7 +108,85 @@
             <span>下一页</span>
           </div>
         </div>
-        <div class="content"></div>
+        <div class="product_list">
+          <ul class="clearfix">
+            <li>
+              <div>
+                <div class="img">
+                  <a href=""><img src="http://127.0.0.1:80/images/products03Big1.jpg" alt=""></a> 
+                </div>
+                <div class="price">￥85</div>
+                <div class="title"><a href="">大润窑10头汝窑茶具</a></div>
+                <div class="status">有货</div>
+                <div class="operation clearfix">
+                  <span @click="contrast"><img src="http://127.0.0.1:80/images/no-check.jpg" alt="">对比</span>
+                  <span @click="attention"><img src="http://127.0.0.1:80/images/g-love.png" alt="">关注</span>
+                  <span @click="add"><img src="http://127.0.0.1:80/images/cart.png" alt="">加入购物车</span>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div>
+                <div class="img">
+                  <a href=""><img src="http://127.0.0.1:80/images/products03Big1.jpg" alt=""></a> 
+                </div>
+                <div class="price">￥85</div>
+                <div class="title"><a href="">大润窑10头汝窑茶具</a></div>
+                <div class="status">有货</div>
+                <div class="operation clearfix">
+                  <span @click="contrast"><img src="http://127.0.0.1:80/images/no-check.jpg" alt="">对比</span>
+                  <span @click="attention"><img src="http://127.0.0.1:80/images/g-love.png" alt="">关注</span>
+                  <span @click="add"><img src="http://127.0.0.1:80/images/cart.png" alt="">加入购物车</span>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div>
+                <div class="img">
+                  <a href=""><img src="http://127.0.0.1:80/images/products03Big1.jpg" alt=""></a> 
+                </div>
+                <div class="price">￥85</div>
+                <div class="title"><a href="">大润窑10头汝窑茶具</a></div>
+                <div class="status">有货</div>
+                <div class="operation clearfix">
+                  <span @click="contrast"><img src="http://127.0.0.1:80/images/no-check.jpg" alt="">对比</span>
+                  <span @click="attention"><img src="http://127.0.0.1:80/images/g-love.png" alt="">关注</span>
+                  <span @click="add"><img src="http://127.0.0.1:80/images/cart.png" alt="">加入购物车</span>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div>
+                <div class="img">
+                  <a href=""><img src="http://127.0.0.1:80/images/products03Big1.jpg" alt=""></a> 
+                </div>
+                <div class="price">￥85</div>
+                <div class="title"><a href="">大润窑10头汝窑茶具</a></div>
+                <div class="status">有货</div>
+                <div class="operation clearfix">
+                  <span @click="contrast"><img src="http://127.0.0.1:80/images/no-check.jpg" alt="">对比</span>
+                  <span @click="attention"><img src="http://127.0.0.1:80/images/g-love.png" alt="">关注</span>
+                  <span @click="add"><img src="http://127.0.0.1:80/images/cart.png" alt="">加入购物车</span>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div>
+                <div class="img">
+                  <a href=""><img src="http://127.0.0.1:80/images/products03Big1.jpg" alt=""></a> 
+                </div>
+                <div class="price">￥85</div>
+                <div class="title"><a href="">大润窑10头汝窑茶具</a></div>
+                <div class="status">有货</div>
+                <div class="operation clearfix">
+                  <span @click="contrast"><img src="http://127.0.0.1:80/images/no-check.jpg" alt="">对比</span>
+                  <span @click="attention"><img src="http://127.0.0.1:80/images/g-love.png" alt="">关注</span>
+                  <span @click="add"><img src="http://127.0.0.1:80/images/cart.png" alt="">加入购物车</span>
+                </div>
+              </div>
+            </li>
+          </ul>        
+        </div>
       </div>
     </div>
   </section>
