--- a/user_login.html
+++ b/user_login.html
@@ -59,13 +59,15 @@
 			</div>
 		</div>
 		<!--footer-->
-		<iframe src="footer.html" frameborder="0" scrolling="no" style="width:100%;height:400px;"></iframe>
+		<footer id="footer" class="container"></footer>
 		<!--侧边栏-->
 		<div id="setbar"></div>
 
 		<!--<script src="js/common.js"></script>-->
 		<!--<script src="js/ajax.js"></script>-->
+		<script src="js/axios.min.js"></script>
 		<script src="js/jquery-1.11.3.js"></script>
 		<script src="js/login.js"></script>
+		<script src="js/footer.js"></script>
 	</body>
 	</html>
