--- a/user_register.html
+++ b/user_register.html
@@ -111,11 +111,13 @@
 			</div>
 		</div>
 		<!--footer-->
-		<iframe src="footer.html" frameborder="0" scrolling="no" style="width:100%;height:400px;"></iframe>
+		<footer id="footer" class="container"></footer>
 		
 		<!--侧边栏-->
 		<div id="setbar"></div>
+		<script src="js/axios.min.js"></script>
 		<script src="js/common.js"></script>
 		<script src="js/reg_script.js"></script>
+		<script src="js/footer.js"></script>
 	</body>
 </html>
